[gd_scene load_steps=7 format=2]

[ext_resource path="res://wall_area.gd" type="Script" id=1]
[ext_resource path="res://wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://explotion_sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://explotion.tscn" type="PackedScene" id=4]
[ext_resource path="res://bullet_contact.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 10.5 )

[node name="wall_area" type="Area2D"]
script = ExtResource( 1 )

[node name="explotion_animation" parent="." instance=ExtResource( 4 )]
playback_speed = 6.0

[node name="wall" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="explotion" parent="." instance=ExtResource( 3 )]

[node name="bullet_contact" parent="." instance=ExtResource( 5 )]

[connection signal="area_entered" from="." to="." method="_on_wall_area_area_entered"]
[connection signal="animation_finished" from="explotion_animation" to="." method="_on_explotion_animation_animation_finished"]
